--- a/src/app/movies/components/add-to-collection-dialog/add-to-collection-dialog.scss
+++ b/src/app/movies/components/add-to-collection-dialog/add-to-collection-dialog.scss
@@ -1,9 +1,13 @@
 .title {
-    //margin: 8px;
-    margin-bottom: 0px;
-    font-size: 24px;
+  margin-bottom: 0px;
+  font-size: 24px;
 }
 
 .subtitle {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+.radio-option {
+  display: block;
+  margin: 8px 0;
 }
