--- a/src/app/movies/pages/search-movies/search-movies.html
+++ b/src/app/movies/pages/search-movies/search-movies.html
@@ -5,12 +5,16 @@
   </h3>
 </div>
 
-<div class="carousel">
+<div class="carousel" *ngIf="carouselMovies.length > 0">
   <div class="carousel-track" [style.transform]="getTransform()">
     @for (movie of carouselMovies; track movie.id; let idx = $index) {
     <div
       class="carousel-slide"
-      [style.backgroundImage]="'url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'"
+      [style.backgroundImage]="
+          movie.backdrop_path
+            ? 'url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'
+            : 'none'
+        "
     ></div>
     }
   </div>
@@ -34,8 +38,10 @@
   <mat-spinner diameter="48" color="primary"></mat-spinner>
 </div>
 <div class="movies-grid">
-  @if (!isLoading) { @for (movie of movies; track movie.id) {
+  @if (!isLoading && movies) { @for (movie of movies; track movie.id)
+  {
   <mat-card
+    appearance="outlined"
     class="movie-card"
     [class.selected]="isMovieSelected(movie.id)"
     (mouseenter)="hoveredMovieId = movie.id"
