fix: little fix

--- a/src/app/navbar/navbar/navbar.html
+++ b/src/app/navbar/navbar/navbar.html
@@ -2,7 +2,7 @@
   <img class="logo" src="/assets/moovy_logo.png" (click)="goToSearchPage()" />
 
   <nav class="nav-links">
-    <a mat-button routerLink="/search" routerLinkActive="active">Search</a>
+    <a mat-button routerLink="/movies" routerLinkActive="active">Search</a>
     <a mat-button routerLink="/collections" routerLinkActive="active"
       >Collections</a
     >
